--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "nodemailer": "^7.0.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.38",
