--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.18",
     "@vitejs/plugin-vue": "^5.1.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
